Fixed messages & cookies - about close cookie expiration time set

--- a/app/templates/app/alumni_switch.html
+++ b/app/templates/app/alumni_switch.html
@@ -1,5 +1,5 @@
 {% extends "app/layout.html" %}
 
 {% block content %}
-<p class="lead">Плохо заходить под разными людьми</p>
+<p class="lead">Пожалуйста, не пользуйтесь чужими кодами, это нарушает мировой порядок</p>
 {% endblock %}
