--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -63,7 +63,7 @@
 <h3>У меня есть код</h3>
 <form role="form" action="" method="post" class="form-inline">
   {% csrf_token %}
-  <input type="text" class="form-control" name="code" value="" placeholder="Ваш код" />
+  <input type="text" class="form-control" name="code" value="" autocomplete="off" placeholder="Ваш код" />
   <button type="submit" class="btn btn-primary">Проверить</button>
 </form>
 {% if not_found %}
@@ -125,7 +125,7 @@
 <form action="" method="post" class="form-inline" id="input-code-form">
   {% csrf_token %}
   <div class="form-group">
-    <input type="text" class="form-control" name="code" placeholder="Другой код" size="100" id="input-code-box" />
+    <input type="text" class="form-control" name="code" autocomplete="off" placeholder="Другой код" size="100" id="input-code-box" />
   </div>
   <div class="form-group">
     <input type="submit" class="btn btn-primary" value="Ввести" />
