Disable invite button until alumnus is selected

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -151,7 +151,7 @@
     {{ invite_form }}
   </div>
   <div class="form-group">
-    <input type="submit" class="btn btn-primary" value="Пригласить" />
+    <input type="submit" class="btn btn-primary invite-button" disabled="disabled" value="Пригласить" />
   </div>
 </form>
 
