--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -21,6 +21,7 @@
   </p>
 
   <a class="btn btn-primary btn-lg" role="button">Закрыть</a>
+  <a class="btn btn-default btn-lg" role="button" href="/qa">Q&A</a>
 
 </div>
 
