--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -65,7 +65,7 @@
 <form role="form" action="/enter" method="post" class="form-inline">
   {% csrf_token %}
   <input type="text" class="form-control code-input" name="code" value="" autocomplete="off" placeholder="Ваш код" />
-  <button type="submit" class="btn btn-primary">Проверить</button>
+  <input type="submit" class="btn btn-primary" value="Проверить"/>
 </form>
 {% if not_found %}
 <p class="text-danger">Введённый код не найден</p>
@@ -154,6 +154,7 @@
   <div class="form-group">
     <input type="submit" class="btn btn-primary invite-button" disabled="disabled" value="Пригласить" />
   </div>
+  <p><i>Ищите по году выпуска, фамилии, имени, букве класса.<br/>Например: v03 ни</i></p>
 </form>
 
 <p><i>(если выпускник не нашелся в списке, напишите подробности на <a href="mailto:alumni57.ru@gmail.com">alumni57.ru@gmail.com</a>, разберемся!)</i></p>
