--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -44,5 +44,11 @@
   <script src="/static/app/scripts/appl.js?v=1"></script>
   {% block scripts %}{% endblock %}
 
+  {% if 'code' in request.session %}
+  <form action="/clear" method="post" class="form-inline">
+    {% csrf_token %}
+    <input type="submit" class="btn btn-default" value="Выйти" />
+  </form>
+  {% endif %}
 </body>
 </html>
