update static version and invite text

--- a/app/templates/app/invite.html
+++ b/app/templates/app/invite.html
@@ -30,12 +30,13 @@
 <textarea style="width:600px; max-width: 600px;" rows="10" class="form-control" onclick="this.focus();this.select()"
 >Привет!
 
-Твой код для голосований выпускников 57-й
+Твой код для голосования в Совет Выпускников 57-й
+http://www.alumni57.info/vybory-2017
 
     {{ code.code }}
     ({{ code.alumni }})
 
-Подробности есть на сайте: http://auth.alumni57.ru
+Подробности про коды - http://auth.alumni57.ru
 
 {{ inviter.full_name }}</textarea>
 
