--- a/app/static/app/content/site.css
+++ b/app/static/app/content/site.css
@@ -46,6 +46,11 @@ input[type="checkbox"].input-validation-error {
     margin-top: 2em;
 }
 
+.ui-autocomplete {
+    max-height: 400px;
+    overflow-y: scroll;
+}
+
 .ui-menu-item em {
     color: gray;
     font-size: 95%;
