update small invite text

--- a/app/templates/app/invite.html
+++ b/app/templates/app/invite.html
@@ -25,7 +25,7 @@
 <p><em>* самостоятельно, по любому закрытому каналу связи. Например,</em></p>
 
 <textarea style="width:600px; max-width:600px; height:70px;" class="form-control" onclick="this.focus();this.select()"
->{{ code.code }} - твой код для голосований выпускников 57-й - на http://auth.alumni57.ru</textarea>
+>{{ code.code }} — твой код для голосования в Совет выпускников 57-й на http://www.alumni57.info/vybory-2017</textarea>
 <br/>
 <textarea style="width:600px; max-width: 600px;" rows="10" class="form-control" onclick="this.focus();this.select()"
 >Привет!
