--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -12,12 +12,12 @@
   <p class="lead">
     Это простая система, с помощью которой выпускники 57-й школы помогут другу другу получить код вида
     <strong>lyc-1817g-pusha-8340125431207923</strong>. Ваш код можно указывать, чтобы вас узнавали
-    при голосованиях, подписании петиций, подписке на закрытые группы и пр.
+    при <a href="http://vote.alumni57.ru">голосованиях</a>, редактировании <a href="http://dir.alumni57.ru">директории</a>,
+    подписании петиций, подписке на закрытые группы и пр.
   </p>
 
   <p class="lead">
-    Если у вас уже есть код, помогите знакомым выпускникам, раздайте им коды через эту страницу. Не переживайте,
-    если пока эти коды негде использовать, они обязательно пригодятся.
+    Если у вас уже есть код, помогите знакомым выпускникам, раздайте им коды через эту страницу.
   </p>
 
   <a class="btn btn-primary btn-lg" role="button">Закрыть</a>
@@ -78,6 +78,7 @@
 <ul>
   <li>попросите у друзей-выпускников прислать вам приглашение личным секретным сообщением</li>
   <li>если у вас нет друзей или у друзей нет кода, не грустите, подождите и попробуйте еще раз</li>
+  <li>заполните <a href="https://goo.gl/wd65PD">форму</a>, чтобы запросить себе код</li>
   <li>если ничего не получилось, напишите побольше о себе на <a href="mailto:alumni57.ru@gmail.com">alumni57.ru@gmail.com</a></li>
 </ul>
 {% endif %}
@@ -115,7 +116,7 @@
     {% if invite.activate is None %}
     (<a href="#" class="input-code-link"
         data-title="Ввести другой код"
-        data-content="Введите коды из других полученных вами личных приглашений, чтобы ими управлять, и чтобы было точно понятно, что вы - это вы">ввести</a>)
+        data-content="Введите коды из других полученных вами личных приглашений, чтобы ими управлять, и чтобы было точно понятно, что вы — это вы">ввести</a>)
     {% endif %}
     {% endif %}
     {% if not invite.is_enabled %}(<i>отключён</i>){% endif %}
