Update link to the new 2018 poll

--- a/app/templates/app/invite.html
+++ b/app/templates/app/invite.html
@@ -25,13 +25,13 @@
 <p><em>* самостоятельно, по любому закрытому каналу связи. Например,</em></p>
 
 <textarea style="width:600px; max-width:600px; height:70px;" class="form-control" onclick="this.focus();this.select()"
->{{ code.code }} — твой код для голосования в Совет выпускников 57-й на http://www.alumni57.info/vybory-2017</textarea>
+>{{ code.code }} — твой код для голосования в Совет выпускников 57-й на http://vote.alumni57.ru</textarea>
 <br/>
 <textarea style="width:600px; max-width: 600px;" rows="10" class="form-control" onclick="this.focus();this.select()"
 >Привет!
 
 Твой код для голосования в Совет Выпускников 57-й
-http://www.alumni57.info/vybory-2017
+http://vote.alumni57.ru
 
     {{ code.code }}
     ({{ code.alumni }})
